# onyx

./: .gitignore  .pre-commit-config.yaml  AGENTS.md.template  CLAUDE.md.template  CONTRIBUTING.md  README.md  ct.yaml  index.yaml  onyx-0.4.7.tgz  pyproject.toml
.github/: actionlint.yml  dependabot.yml  runs-on.yml
.github/workflows/: check-lazy-imports.yml  deployment.yml  docker-build-push-backend-container-on-tag.yml  docker-build-push-cloud-web-container-on-tag.yml  docker-build-push-model-server-container-on-tag.yml  docker-build-push-web-container-on-tag.yml  docker-tag-beta.yml  docker-tag-latest.yml  helm-chart-releases.yml  nightly-close-stale-issues.yml  nightly-scan-licenses.yml  pr-external-dependency-unit-tests.yml  pr-helm-chart-testing.yml  pr-integration-tests.yml  pr-jest-tests.yml  pr-labeler.yml  pr-linear-check.yml  pr-mit-integration-tests.yml  pr-playwright-tests.yml  pr-python-checks.yml  pr-python-connector-tests.yml  pr-python-model-tests.yml  pr-python-tests.yml  pr-quality-checks.yml  release-devtools.yml  sync_foss.yml  tag-nightly.yml  zizmor.yml
backend/: Dockerfile  Dockerfile.model_server  docker-bake.hcl  pyproject.toml  pytest.ini  supervisord.conf
backend/model_server/: custom_models.py  (+1 more)
plans/: .gitignore
tools/ods/: README.md  go.mod  go.sum  hatch_build.py  pyproject.toml
tools/ods/cmd/: cherry-pick.go  db_restore.go  root.go
tools/ods/internal/paths/: paths.go
tools/ods/internal/prompt/: prompt.go
web/: Dockerfile  jest.config.js  next.config.js  package-lock.json  package.json  playwright.config.ts  tsconfig.json
(+1157 files in other folders)
